--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+beautifulsoup4==4.12.3
 bertopic==0.16.4
-fpdf==1.7.2
+EbookLib==0.18
+interfaces==0.0.4
+nltk==3.9.1
 numpy==1.24.3
 pandas==2.2.3
-pdfplumber==0.11.4
+PyPDF2==3.0.1
 python-dotenv==1.0.1
 python_docx==1.1.2
+python_pptx==1.0.2
+PyYAML==6.0.2
+PyYAML==6.0.2
+qdrant_client==1.12.1
 scikit_learn==1.5.2
 sentence_transformers==3.1.0
 streamlit==1.39.0
+textract==1.6.5
+torch==2.4.1
 transformers==4.44.2
