--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,12 @@ numpy==1.24.3
 pandas==2.2.3
 PyPDF2==3.0.1
 python-dotenv==1.0.1
-python_docx==1.1.2
-python_pptx==1.0.2
+python-docx==1.1.2
+python-pptx==1.0.2
 PyYAML==6.0.2
-PyYAML==6.0.2
-qdrant_client==1.12.1
-scikit_learn==1.5.2
-sentence_transformers==3.1.0
+qdrant-client==1.12.1
+scikit-learn==1.5.2
+sentence-transformers==3.1.0
 streamlit==1.39.0
-textract==1.6.5
 torch==2.4.1
 transformers==4.44.2
